# onnx_cpp

./: .envrc  CMakeLists.txt  compile_commands.json  justfile  xmake.lua
.direnv/aliases/: 1
.direnv/functions/: 1  2  3
include/: detections.hpp  detector.hpp  inference.hpp  onnxinf.hpp  opencvinf.hpp  tensorinf.hpp  torchinf.hpp  utils.hpp
src/: detections.cpp  detector.cpp  inference.cpp  main.cpp  onnxinf.cpp  opencvinf.cpp  tensorinf.cpp  torchinf.cpp  utils.cpp
